--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/system": "^4.12.1",
     "axios": "^0.19.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
